hard-gists/3af51fd2d11ddcad7f16/run.log
=== Docker Run Log for 3af51fd2d11ddcad7f16 ===
Started at: Mi 29. Okt 14:11:09 CET 2025

[2025-10-29 14:11:09] START: Running container for 3af51fd2d11ddcad7f16
[2025-10-29 14:11:09] SUCCESS: Container 455265e791b880d78c59d297cbf0f068cda7304041952bbcb92428f8b17f8a71 started for 3af51fd2d11ddcad7f16
=== Container logs for 3af51fd2d11ddcad7f16 ===
  File "/snippet.py", line 41
    print cmd
    ^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 3af51fd2d11ddcad7f16 ===
[2025-10-29 14:11:11] INFO: Container 455265e791b880d78c59d297cbf0f068cda7304041952bbcb92428f8b17f8a71 has stopped
